[project]
name = "housing-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.10.1",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.3",
    "openrouteservice>=2.3.3",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
